2005-10-05  Edward Hervey  <edward@fluendo.com>

	* configure.in: (HAVE_SAMBA_OLD_CLOSE):
	* modules/smb-method.c:
	Added correct handling of the renaming of the close function pointer in samba's
	libsmbclient.h (close --> close_fn)

2005-10-03  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Bump version to 2.13.1. Further 2.12.x work is on gnome-2-12 branch.

=== gnome-vfs 2.12.1 ===
	
2005-10-03  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for 2.12.1.

2005-09-30  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-mime-sniff-buffer.c:
	(_gnome_vfs_mime_sniff_buffer_get):
	Fix mime sniffing being broken for small file, due to change in
	EOF behaviour in 2005-09-07 change.

2005-09-29  Tor Lillqvist  <tml@novell.com>

	* libgnomevfs/gnome-vfs-configuration.c
	* libgnomevfs/gnome-vfs-method.c: Include
	gnome-vfs-private-utils.h on Win32 to get the redefinitions of
	GNOME_VFS_SYSCONFDIR and GNOME_VFS_LIBDIR so that we don't have
	compile-time pathnames in the binary, and install-anywhere
	actually works.

	* libgnomevfs/gnome-vfs-uri.c (gnome_vfs_uri_new): Simplify the
	Win32 code. Don't call gnome_vfs_escape_path_string() as the Unix
	code doesn't either. Just turn backslashes into slashes.

	I am still not sure whether it is correct for all use cases,
	though. Unfortunately much GNOME software mixes URIs and pathnames
	rather freely (which mostly works on Unix where pathname syntax
	matches the local part of a file: URI). The parameter to this
	function is called text_uri, and said to be "a string representing
	a URI". What does that mean? Is it actually a pathname in the
	so-called GLib file name encoding (on-disk encoding on Unix, UTF-8
	on Windows), or a URI that already is properly URI-escaped?
	Apparently currently it can be either, sigh.

2005-09-13  Christian Neumair  <chris@gnome-de.org>

	* libgnomevfs/gnome-vfs-utils.c:
	(_gnome_vfs_uri_resolve_all_symlinks_uri): Partially revert the last